At Least the HTTP Requests Aren't All 404s
Running the 2nd HTTP request, the POST one, does return a 200. It doesn't do anything yet, but it makes the call. I think.
