# LineUp.Backend/Controllers/ScheduleController.cs
@@ -1,3 +1,4 @@
+using LineUp.Backend.Models;
 using Microsoft.AspNetCore.Authorization;
 using Microsoft.AspNetCore.Mvc;
 
@@ -18,30 +19,6 @@ public class ScheduleController : ControllerBase
         );
     }
 
-    [HttpGet("private")]
-    [Authorize]
-    public IActionResult Private()
-    {
-        return Ok(
-            new
-            {
-                Message = "Hello from a private endpoint! You need to be authenticated to see this.",
-            }
-        );
-    }
-
-    [HttpGet("private-scoped")]
-    [Authorize("read:messages")]
-    public IActionResult Scoped()
-    {
-        return Ok(
-            new
-            {
-                Message = "Hello from a private endpoint! You need to be authenticated and have a scope of read:messages to see this.",
-            }
-        );
-    }
-
     // This is a helper action. It allows you to easily view all the claims of the token.
     [HttpGet("claims")]
     public IActionResult Claims()
@@ -49,15 +26,27 @@ public class ScheduleController : ControllerBase
         return Ok(User.Claims.Select(c => new { c.Type, c.Value }));
     }
 
+    [HttpGet("dateCoverage")]
+    public async Task<IActionResult> GetDateCoverage()
+    {
+        LineUpContext db = new LineUpContext();
+        Schedule result = await db.FindAsync<Schedule>();
+        if (result != null)
+            return Ok(new { Message = "Querying a Date Coverage" + result.ID });
+        else
+            return NotFound(new { Message = "No Schedule Found" });
+    }
+
     [HttpPost("dateCoverage")]
     public IActionResult PostDateCoverage()
     {
-        /*db.Add(
+        LineUpContext db = new LineUpContext();
+        db.Add(
             new Schedule()
             {
                 // DateCoverage = new DateTime[];
             }
-        );*/
+        );
         return Ok(new { Message = "Posted new date coverage" });
     }
 }
